logs/validate.20260408-060354.log
Mode: isolate
Isolate: including Chap19 Chap28 Chap02
error: unexpected token, expected `;`
  --> src/Chap28/MaxContigSubSumOptStEph.rs:87:9
   |
87 |         implies
   |         ^^^^^^^

error[E0432]: unresolved import `crate::Chap28::MaxContigSubSumOptStEph::MaxContigSubSumOptStEph::lemma_prefix_opt_is_mcss`
  --> src/Chap28/MaxContigSubSumOptMtEph.rs:23:9
   |
23 |     use crate::Chap28::MaxContigSubSumOptStEph::MaxContigSubSumOptStEph::lemma_prefix_opt_is_mcss;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_prefix_opt_is_mcss` in `Chap28::MaxContigSubSumOptStEph::MaxContigSubSumOptStEph`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 25511MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
